# httpserver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  deps.cmake  jsoncpp.cmake  rapidjson.cmake
example/: CMakeLists.txt  test_httpserver.cpp
exemplo/: CMakeLists.txt  exemplo.c  exemplo.cpp
httpserver/: Roteador.cpp  Roteador.h  client.cpp  client.h  compress.cpp  compress.h  conversorrequisicao.cpp  conversorrequisicao.h  conversorrequisicaobody.h  conversorrequisicaobodytojson.h  conversorrequisicaoparametros.cpp  conversorrequisicaoparametros.h  file.cpp  file.h  http_session.cpp  http_session.h  http_session_i.cpp  http_session_i.h  httpserver.cpp  httpserver.h  iConversorRequisicao.h  invoker.h  json.h  logger.cpp  logger.h  parameter_parser.h  parser_body.h  parser_request_i.h  parser_url.h  request.cpp  request.h  response.cpp  response.h  root_certificates.hpp  router.cpp  router.h  server_certificate.hpp  session.cpp  session.h  session_plain.cpp  (+5 more)
httpserver/parser/: from_json.cpp  from_json.h  json.h  parameter_parser.h  parser_request_basic.h  parser_request_i.h  to_json.cpp  to_json.h
src/: controller.cpp  controller.h  http_client_request.cpp  http_client_request.h  http_server.hpp  http_worker.h  httpserver.cpp  httpserver.h  request.cpp  request.h  request.hpp  router.cpp  router.h
test/: test_httpserver.cpp
